--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -68,6 +68,9 @@
   translation: Formación
 - id: user_profile_latest
   translation: Recientes
+  
+# Accomplishments widget
+  
 - id: see_certificate
   translation: Ver certificado
 - id: present
