--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -173,6 +173,9 @@
   translation: Página no encontrada
 - id: 404_recommendations
   translation: ¿Buscabas una de éstas?
+  
+# Cookie consent
+  
 - id: cookie_message
   translation: Este sitio web utiliza cookies para garantizarle una mejor experiencia.
 - id: cookie_dismiss
